# ibl_neuromodulators

./: .gitignore  00_load_photometry_KB.ipynb  00_project_overview.ipynb  00_query_database.ipynb  01_quality_control.ipynb  01_query_database.ipynb  01_session_viewer.ipynb  01_session_viewer_KB.ipynb  02_serotonin_rpe.ipynb  02_serotonin_rpe_qc.ipynb  CLAUDE.md  Quadrado2025.py  README.md  get_responses.py  merge_region_tables.py  notes.txt  photometry_qc.py  pyproject.toml  qc_metrics.pqt  qc_photometry.py  query_database.py  session_qc.py  setup.py  util.py
behaviour/: Mice_performance_pipf.ipynb  PsyTrack_defpip.ipynb  PsyTrack_pip.ipynb  correlation_analysis_fpip.ipynb
iblnm/: __init__.py  analysis.py  config.py  data.py  gui.py  io.py  lp_viewer.py  resp.py  task.py  util.py  validation.py  vis.py
metadata/: fibers.csv  insertions.csv  recordings.csv  regions.csv  regions_fromfilenames.csv  regions_frommanual.csv  sessions.pqt
notes/: analysis_brainstorm_behavioral_neural.md  lmm_statistical_considerations.md
scripts/: SfN2025.py  baseline.py  baseline_for_popeye.py  cca.py  check_video_data.py  collect_trials.py  contrast_coding_comparison.py  dataset_overview.py  demo_load_session.py  download_trials.py  encoding.py  events.py  example_session.py  fit_psytrack_example.py  generate_eids.py  get_responses.py  linear_lagged_regression.py  lp_viewer.py  migrate_events_pqt.py  movement_encoding.py  patch_qc_flags.py  photometry.py  photometry_qc.py  plot_fiber_locations.py  pose.py  pose_qc.py  qc_overview.py  query_database.py  recording_capacity.py  task.py  (+17 more)
(+58 files in other folders)
